--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,37 +1,50 @@
+
 AllCops:
   Exclude:
-    - "lib/*"
     - "bin/*"
     - "db/**/*"
     - "config/**/*"
     - "Guardfile"
     - "Rakefile"
-    - "node_modules/**/*"
   DisplayCopNames: true
+  DisabledByDefault: true
 
 Metrics/LineLength:
   Enabled: false
-  Max: 120
+  Max: 300
 Metrics/MethodLength:
-  Include: ["app/controllers/*"]
   Enabled: false
-  Max: 20
+  Include: ["app/controllers/*"]
+  Max: 2000
 Metrics/AbcSize:
-  Include: ["app/controllers/*"]
   Enabled: false
-  Max: 30
+  Include: ["app/controllers/*"]
+  Max: 300
 Metrics/ClassLength:
   Enabled: false
-  Max: 150
-Metrics/BlockLength:
-  ExcludedMethods: ["describe"]
+  Max: 1500
+Naming/MethodParameterName:
   Enabled: false
-
+Metrics/CyclomaticComplexity:
+  Enabled: false
+Metrics/PerceivedComplexity:
+  Enabled: false
+Style/For:
+  Enabled: false
+Metrics/BlockNesting:
+  Enabled: false
+Style/WordArray:
+  Enabled: false
+Naming/AccessorMethodName:
+  Enabled: false
+Style/IdenticalConditionalBranches:
+  Enabled: false
+Style/IfUnlessModifier:
+  Enabled: false
 Style/Documentation:
   Enabled: false
 Style/ClassAndModuleChildren:
   Enabled: false
-
 Layout/ExtraSpacing:
   AllowForAlignment: false
 Layout/MultilineMethodCallIndentation:
