style change to layout

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,9 +21,9 @@ Metrics/ClassLength:
 Metrics/BlockLength:
   ExcludedMethods: ["describe"]
 
-Style/Documentation:
+Layout/Documentation:
   Enabled: false
-Style/ClassAndModuleChildren:
+Layout/ClassAndModuleChildren:
   Enabled: false
 
 Layout/ExtraSpacing:
