--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,7 +8,7 @@ AllCops:
     - "node_modules/**/*"
   DisplayCopNames: true
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 120
 Metrics/MethodLength:
   Include: ["app/controllers/*"]
@@ -21,9 +21,9 @@ Metrics/ClassLength:
 Metrics/BlockLength:
   ExcludedMethods: ["describe"]
 
-Layout/Documentation:
+Style/Documentation:
   Enabled: false
-Layout/ClassAndModuleChildren:
+Style/ClassAndModuleChildren:
   Enabled: false
 
 Layout/ExtraSpacing:
